[gd_scene load_steps=7 format=3 uid="uid://23fxt8ictjf2"]

[ext_resource type="Texture2D" uid="uid://dx2cwjqvq1gbj" path="res://root/Sprites/mist.png" id="1_hgi5h"]
[ext_resource type="Script" path="res://root/Scripts/MistCloud.gd" id="1_rtmc6"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_6nkr7"]
blend_mode = 1

[sub_resource type="Curve" id="Curve_ccdro"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_a2kof"]
curve = SubResource("Curve_ccdro")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vtws4"]
lifetime_randomness = 0.1
particle_flag_disable_z = true
particle_flag_damping_as_friction = true
emission_shape = 3
emission_box_extents = Vector3(10, 10, 1)
direction = Vector3(0, -1, 0)
spread = 0.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
damping_min = 1.0
damping_max = 1.0
scale_min = 0.03
scale_max = 0.03
alpha_curve = SubResource("CurveTexture_a2kof")

[node name="LiftArea2D" type="Area2D"]
collision_layer = 8
script = ExtResource("1_rtmc6")

[node name="MistParticles2D" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_6nkr7")
process_material = SubResource("ParticleProcessMaterial_vtws4")
texture = ExtResource("1_hgi5h")
lifetime = 2.5
preprocess = 7.5
speed_scale = 0.25
randomness = 0.25
fixed_fps = 60
local_coords = true

[connection signal="body_entered" from="." to="." method="_on_lift_area_2d_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_lift_area_2d_body_exited"]
